# ros_2017

2304/Polovtsev/lab2/: CMakeLists.txt  package.xml  sickMan.h
2304/Polovtsev/lab2/src/: doctor.cpp  sick.cpp  sickMan.cpp
2304/Polovtsev/lab2/srv/: Heal.srv
